update ecdd report
